Refactor NavPanel and MapPage components for improved hotspot management and layout
- Updated NavPanel to conditionally adjust label positioning based on hotspot titles.
- Replaced static hotspot definitions in MapPage with dynamic mapping from the asset manifest.
- Enhanced PanoramaPage to maintain consistent hotspot coordinates with MapPage.
- Removed unused assets and code for better performance and clarity.

--- a/src/utils/manifest.json
+++ b/src/utils/manifest.json
@@ -114,6 +114,7 @@
     {
       "folder": "点位素材 (压缩图)/单元入户门",
       "title": "单元入户门",
+      "labelSide": "left",
       "panoramas": [
         "点位素材 (压缩图)/单元入户门/入户大堂.jpg"
       ],
@@ -122,14 +123,14 @@
       ]
     },
     {
-      "folder": "点位素材 (压缩图)/归家车马厅",
-      "title": "归家车马厅",
+      "folder": "点位素材 (压缩图)/归家车马院",
+      "title": "归家车马院",
       "panoramas": [
-        "点位素材 (压缩图)/归家车马厅/大门前场.jpg"
+        "点位素材 (压缩图)/归家车马院/大门前场.jpg"
       ],
       "images": [
-        "点位素材 (压缩图)/归家车马厅/C3大门透视夜景 hj-h-syl-h.png",
-        "点位素材 (压缩图)/归家车马厅/C3大门透视(深夜景) hj-h-lml-h.png"
+        "点位素材 (压缩图)/归家车马院/C3大门透视夜景 hj-h-syl-h.png",
+        "点位素材 (压缩图)/归家车马院/C3大门透视(深夜景) hj-h-lml-h.png"
       ]
     },
     {
